# openclaude

./: .env.example  .env.prod.example  .gitignore  Makefile  OpenClade_Business_Plan.md  OpenClade_Technical_Architecture.md  README-MINER.md  README.md  README_CN.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_miner_phase3.py  003_add_user_is_admin.py
backend/app/: main.py
backend/app/api/claude/: __init__.py  proxy.py
backend/app/api/v1/: __init__.py  admin.py  api_keys.py  auth.py  billing.py  miners.py  usage.py
backend/app/core/: config.py  database.py  deps.py  logging.py  metrics.py  redis.py  security.py  sr25519_utils.py
backend/app/middleware/: rate_limiting.py
backend/app/models/: __init__.py  base.py  miner.py  user.py
backend/app/schemas/: api_key.py  auth.py  billing.py  miner.py  proxy.py
backend/app/services/: api_key_service.py  billing_service.py  miner_service.py  referral_service.py  routing_service.py  scoring_service.py  user_service.py
backend/tests/: conftest.py  test_admin_api.py  test_api_key_service.py  test_api_keys.py  test_auth.py  test_billing_api.py  test_billing_service.py  test_coverage_gaps.py  test_e2e_admin_monitoring.py  test_e2e_full_chain.py  test_e2e_miner_flow.py  test_metrics.py  test_miner_earnings_api.py  test_miner_phase3_api.py  test_miners_api.py  test_performance_benchmarks.py  test_proxy.py  test_redis_sentinel.py  test_referral_service.py  test_routing_service.py  test_scoring_service.py  test_security.py  test_sr25519_verification.py  test_usage_api.py
backend/tests/benchmarks/: docker-compose.benchmark.yml  generate_report.py  locustfile.py  mock_anthropic_server.py  run_benchmark.sh
docs/: API_Reference.md  Architecture.md  Launch_Checklist.md  Mainnet_Migration_Assessment.md  Miner_Guide.md  PRD_Phase3_Miner.md  PRD_Phase4_Frontend.md  User_Guide.md  benchmark_500qps_stats.csv  (+7 more)
subnet/: pyproject.toml
subnet/config/: miner.example.yaml  miner.localnet.yaml  miner.testnet.yaml  validator.localnet.yaml  validator.testnet.yaml
subnet/miner/: __init__.py  api_pool.py  config.py
subnet/neurons/: __init__.py  miner.py  validator.py
subnet/protocol/: __init__.py  synapse.py
subnet/scripts/: register_subnet.py  validate_e2e_local.py  validate_localnet.py  validate_testnet_2tao.py
subnet/tests/: __init__.py  conftest.py  test_api_pool.py  test_integration_chain.py  test_miner_config.py  test_probe.py  test_register_subnet.py  test_scoring.py  test_synapse.py  test_trust.py  test_validate_testnet_2tao.py
subnet/validator/: __init__.py  probe.py  scoring.py  trust.py
(+93 files in other folders)
