[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaude-subnet"
version = "0.1.0"
description = "OpenClade Bittensor Subnet"
requires-python = ">=3.11"
dependencies = [
    "bittensor>=7.0.0",
    "anthropic>=0.40.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["protocol", "validator", "miner", "neurons"]

[tool.hatch.build.targets.sdist]
include = [
    "protocol/",
    "validator/",
    "miner/",
    "neurons/",
    "tests/",
    "scripts/",
    "config/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
